tests/models/enum/unit/fail/validate.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/validate.rs:5:5
  |
5 |     Value
  |     ^^^^^

warning: unused import: `Result`
 --> tests/models/enum/unit/fail/validate.rs:1:19
  |
1 | use dade::{model, Result};
  |                   ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
